# project-llm-discord

./: .dockerignore  .env.example  Dockerfile  MANIFEST.in  README.rst  mcp.yml  pyproject.toml
.do/: app.yaml
.github/workflows/: default.yml
llm_discord/: __main__.py
llm_discord/agent/: __init__.py
llm_discord/agent/dynamicprompt/: __init__.py
llm_discord/api/: __init__.py
llm_discord/config/: app.py  chatmodel.py  discord.py  mcp.py
llm_discord/discord/checks/: __init__.py
llm_discord/discord/client/: __init__.py
llm_discord/discord/cogs/: __init__.py
llm_discord/discord/extensions/: __init__.py  ask.py  extmanager.py  gpt.py  logging.py  pingpong.py
llm_discord/logging/: __init__.py
llm_discord/logging/filters/: stderr.py  stdout.py
llm_discord/logging/handlers/: stderr.py  stdout.py
llm_discord/mcp/: __init__.py
llm_discord/mcp/tools/: __init__.py
llm_discord/model/: pydantic.py  singleton.py  static.py
llm_discord/util/: __init__.py
requirements/: run.txt  test.txt
